<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rounded_bottom_card"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/go_back"
            android:contentDescription="@string/go_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_back"
            app:tint="@color/black"
            android:layout_marginTop="48dp"
            android:layout_marginStart="32dp"/>
    </RelativeLayout>

    <!-- Vertical Guideline to help with centering -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.55" />

    <ImageView
        android:id="@+id/image_robot_play"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/robot"
        android:src="@drawable/robo3"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Button 1 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_play"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="@string/jogar"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/image_robot_play"
        app:layout_constraintBottom_toTopOf="@id/image_robot_learn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Robot 2 -->
    <ImageView
        android:id="@+id/image_robot_learn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/robot"
        android:src="@drawable/robot4"
        app:layout_constraintTop_toBottomOf="@id/button_play"
        app:layout_constraintBottom_toTopOf="@id/button_learn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Button 2 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_learn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="@string/learn"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/image_robot_learn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
