<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rounded_bottom_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/go_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_back"
            app:tint="@color/black"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/lives_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/heart1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/heart"
                android:contentDescription="@string/heart" />

            <ImageView
                android:id="@+id/heart2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/heart"
                android:contentDescription="@string/heart"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/heart3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/heart"
                android:contentDescription="@string/heart"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/matrix_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/operation_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/matrix_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/option1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/option2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/option3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/option4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
